gestion des outils de sauvegarde + error handling sql

--- a/templates/config.html
+++ b/templates/config.html
@@ -6,6 +6,8 @@
         <ul>
             <li><a>Import/export base complète</a></li>
             <li><a href="{{ url_for('manage_usbdrives') }}">Gestion disques</a></li>
+            <li><a href="{{ url_for('manage_targets') }}">Gestion machines cibles</a></li>
+            <li><a href="{{ url_for('manage_tools') }}">Gestion outils de sauvegarde</a></li>
         </ul>
     </nav>
 {% endblock %}
