--- a/templates/main.html
+++ b/templates/main.html
@@ -1,1 +1,5 @@
 {% extends "base.html" %}
+
+{% block content %}
+Afficher ici les alertes de sauvegardes à mettre à jour et la liste des dernières sauvegardes
+{% endblock %}
